# genshin-planer

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  eslint.config.ts  index.html  package.json  package.json5  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
.github/actions/build-tauri/: action.yml
.github/script/: gen-release-body.ts  gen-update.ts  package.json  read-version.ts  release-cnb.ts
.github/workflows/: auto-build.yml  release.yml  sync-to-cnb.yml
src/: App.vue  init.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.json5
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/assets/: global.css  main.css
src/components/: StoreExample.vue
src/components/calculator/: AvatarCalculatorDialog.vue  AvatarConfigPanel.vue  AvatarSelector.vue  PresetManageDialog.vue
src/components/common/: CachedImage.vue
src/components/home/: AvatarSelectDialog.vue  DebugPanel.vue  ItemLibraryPanel.vue  PlanDialogs.vue  PlanPanel.vue  QrLoginDialog.vue  UpdateDialog.vue
src/composables/: useCachedImage.ts
src/entity/: HttpHeaderManager.ts  InventoryItem.ts  MHY.ts  OverallConsume.ts  QRLoginEntity.ts
src/entity/calculator/: Avatar.ts
src/entity/remote/: QrLogin.ts  QrLoginResult.ts  RealnameInfo.ts  TokenWrapper.ts  UserInformation.ts
src/entity/wiki/: HakushTypes.ts  WikiAvatar.ts  WikiItem.ts
src/service/: ImageCacheService.ts  MHYService.ts  UpdateService.ts  WikiService.ts
src/store/: store.ts
src/utils/: hakushAdapter.ts  materialCalculator.ts
